added drawer layout + functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Droid Caffe</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="tab_label_1">Desserts</string>
     <string name="tab_label_2">Pastries</string>
     <string name="tab_label_3">Stores</string>
@@ -24,6 +27,14 @@
     <string name="comment">Comment</string>
     <string name="share">Share</string>
     <string name="pastry_recipies">Pastry Recipies</string>
+    <string name="pizza">Pizza</string>
+    <string name="pasta">Pasta</string>
+    <string name="contact_us">Contact us</string>
+    <string name="about_us">About us</string>
+    <string name="share_app">Share App</string>
+    <string name="shalom_otieno_strathmore_edu">shalom.otieno@strathmore.edu</string>
+    <string name="shalom_orlando">Shalom Orlando</string>
+    <string name="cocktails">Cocktails</string>
 
     <array name="desserts_images">
         <item>@drawable/donut</item>
